restructure (src), add utils_openai.py + test it

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "test-innercamp"
 version = "0.1.0"
@@ -6,6 +10,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "requests>=2.32.5",
+    "python-dotenv>=1.0.0",
 ]
 
 [dependency-groups]
@@ -13,6 +18,10 @@ dev = [
     "mypy>=1.19.1",
     "ruff>=0.14.14",
 ]
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["src*"]
 
 
 [tool.ruff]
