--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dev = [
     "ruff>=0.14.14",
     "pytest>=8.0.0",
     "pytest-mock>=3.12.0",
+    "pytest-dotenv>=1.0.0",
 ]
 
 [tool.setuptools.packages.find]
@@ -31,6 +32,7 @@ testpaths = ["test"]
 python_files = ["test_*.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
+env_files = ".env"
 markers = [
     "integration: marks tests as integration tests (real API calls, slower)",
     "unit: marks tests as unit tests (fast, with mocks)",
