--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "requests>=2.32.5",
+    "beautifulsoup4>=4.12.3",
     "python-dotenv>=1.0.0",
     "flask>=3.0.0",
 ]
@@ -20,7 +21,8 @@ dev = [
     "ruff>=0.14.14",
     "pytest>=8.0.0",
     "pytest-mock>=3.12.0",
-    "pytest-dotenv>=1.0.0",
+    "pytest-dotenv<1.0.0",
+    "bs4>=0.0.2",
 ]
 
 [tool.setuptools.packages.find]
