--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,11 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "requests>=2.32.5",
-    "beautifulsoup4>=4.12.3",
+    "mwparserfromhell>=0.6.6",
     "python-dotenv>=1.0.0",
     "flask>=3.0.0",
+    "faiss-cpu",
+    "numpy",
 ]
 
 [dependency-groups]
@@ -23,6 +25,7 @@ dev = [
     "pytest-mock>=3.12.0",
     "pytest-dotenv<1.0.0",
     "bs4>=0.0.2",
+    "playwright>=1.57.0",
 ]
 
 [tool.setuptools.packages.find]
