--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,12 @@ name = "test-innercamp"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.10"
 dependencies = [
     "requests>=2.32.5",
-    "mwparserfromhell>=0.6.6",
-    "python-dotenv>=1.0.0",
+    "python-dotenv<1.0.0",
     "flask>=3.0.0",
-    "faiss-cpu",
+    "faiss-cpu>1.0.0,<=1.13.2",
     "numpy",
 ]
 
