--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,8 @@ GIGACHAT_KEY_PATH=certs/gigachat.key
 GIGACHAT_CHAIN_PATH=certs/verify_sigma.pem
 
 # use at home only (debug)
+OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
 OPENROUTER_API_KEY=xxx
+
+# extra print
+DEBUG=false
