--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,8 @@ dependencies = [
     "requests>=2.32.5",
     "python-dotenv<1.0.0",
     "flask>=3.0.0",
-    "faiss-cpu>=1.0.0,<=1.13.2",
-    "numpy>=2.0.0,<=2.4.1",
+    "faiss-cpu>=1,<2",
+    "numpy<2",
 ]
 
 [dependency-groups]
