--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "flask>=3.0.0",
     "faiss-cpu>=1,<1.9",
     "numpy>=1.20,<2",
+    "loguru>=0.7.3",
 ]
 
 [dependency-groups]
